<resources>
    <string name="app_name">Navigator</string>
    <string name="take_picture">Take Picture</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add_map_step1">Step 1 Select the map image you wish to upload</string>
    <string name="add_map_step2">Step 2 Insert name of your image</string>
    <string name="hint_image">Enter here</string>
    <string name="textQr"></string>
    <string name="todo">TODO</string>
    <string name="title_activity_admin_landing_page">AdminLandingPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_add_map">Add Map</string>
    <string name="menu_delete_map">Delete Map</string>
    <string name="menu_add_location">Add Location</string>
    <string name="menu_delete_location">Delete Location</string>
    <string name="menu_generate_qr">Generate QR Code</string>
    <string name="menu_logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
