<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/baseline_dashboard_black_18dp"
            android:title="@string/menu_dashboard" />

    </group>

    <item android:title="Manage Map">
        <menu>
            <item
                android:id="@+id/nav_add_map"
                android:icon="@drawable/baseline_map_black_18dp"
                android:title="@string/menu_add_map" />

            <item
                android:id="@+id/nav_delete_map"
                android:icon="@drawable/baseline_cancel_presentation_black_18dp"
                android:title="@string/menu_delete_map" />
        </menu>
    </item>

    <item
        android:title="Manage Location">
        <menu>
            <item
                android:id="@+id/nav_add_location"
                android:icon="@drawable/baseline_my_location_black_18dp"
                android:title="@string/menu_add_location" />
            <item
                android:id="@+id/nav_delete_location"
                android:icon="@drawable/baseline_delete_black_18dp"
                android:title="@string/menu_delete_location" />
            <item
                android:id="@+id/nav_generate_qr"
                android:icon="@drawable/baseline_assignment_black_18dp"
                android:title="@string/menu_generate_qr" />
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_exit_to_app_black_18dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
